Changes for SPECPROC-7 - Provide support in decision structures for automated / decision support / ad hoc modes.
Changes for SPECPROC-6 - Adjust SYSTEM_CALL definition.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -6,6 +6,10 @@
 ==== Package task_planning
 
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_adhoc_branch_class[ADHOC_BRANCH]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_adhoc_group_class[ADHOC_GROUP]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_boolean_context_expression_class[BOOLEAN_CONTEXT_EXPRESSION]
@@ -19,6 +23,10 @@
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_callback_notification_class[CALLBACK_NOTIFICATION]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_callback_wait_class[CALLBACK_WAIT]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_choice_branch_class[CHOICE_BRANCH]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_choice_group_class[CHOICE_GROUP]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_clock_time_class[CLOCK_TIME]
 [.xcode]
@@ -49,6 +57,8 @@
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_delay_event_class[DELAY_EVENT]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_dispatchable_action_class[DISPATCHABLE_ACTION]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_dispatchable_task_class[DISPATCHABLE_TASK]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_event_action_class[EVENT_ACTION]
 [.xcode]
@@ -120,11 +130,15 @@
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_work_plan_class[M_WORK_PLAN]
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_override_type_enumeration[OVERRIDE_TYPE]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_def_class[PARAMETER_DEF]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_mapping_class[PARAMETER_MAPPING]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_performable_action_class[PERFORMABLE_ACTION]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_performable_task_class[PERFORMABLE_TASK]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_calendar_class[PLAN_CALENDAR]
 [.xcode]
