--- a/docs/UML/classes/condition_group.adoc
+++ b/docs/UML/classes/condition_group.adoc
@@ -11,7 +11,7 @@ h|*Description*
 This structure is the equivalent of a programming if/then/else statement.
 
 h|*Inherit*
-2+|`TASK_GROUP`
+2+|`CHOICE_GROUP`
 
 h|*Attributes*
 ^h|*Signature*
@@ -24,7 +24,4 @@ a|Set of Tasks to perform. Execution order is defined by the `_execution_type_` 
 
 h|*Invariants*
 2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
-
-h|
-2+a|*_Inv_seq_execution_*: `execution_type = EXECUTION_TYPE.sequential`
 |===
