--- a/docs/UML/classes/context_constant.adoc
+++ b/docs/UML/classes/context_constant.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*CONTEXT_CONSTANT*
 
 h|*Description*
-2+a|
+2+a|Definition of a symbolic constant value that can be used in Context Expressions.
 
 h|*Inherit*
 2+|`CONTEXT_VALUE`
@@ -17,5 +17,5 @@ h|*Attributes*
 
 h|*1..1*
 |*value*: `Any`
-a|
+a|Value of the constant.
 |===
