--- a/docs/UML/classes/performable_action.adoc
+++ b/docs/UML/classes/performable_action.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*_PERFORMABLE_ACTION (abstract)_*
 
 h|*Description*
-2+a|Represents an action that can be performed by the principal performer during the Plan execution. This is either inline defined or via reference to a sub-plan.
+2+a|Represents an Action that can be performed by the principal performer during the Plan execution. This is either inline defined or via reference to a sub-plan.
 
 h|*Inherit*
 2+|`TASK_ACTION`
@@ -22,8 +22,4 @@ a|Descriptions of resources required for the Task, if required to be processed a
 h|*0..1*
 |*other_participations*: `List<TASK_PARTICIPATION>`
 a|List of participations for task item.
-
-h|*0..1*
-|*capture_dataset*: `List<DATASET_SPEC>`
-a|Associated data-set template and/or form via which data to be captured during this Task will actually be entered.
 |===
