corrected typo "amterialised"

--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -2,7 +2,7 @@
 
 The following UML diagram shows the `rm.task_planning` package in overview form, showing the constituent packages, `definition`, `materialised`, and `history`. The first of these packages contains the class model for the _definition model_ expression of a Work Plan, i.e. the workflow structure intentionally designed to achive a goal.
 
-The `materialised` package contains the class model of the amterialised form of the definition, which is created prior to its use in execution. The materialised model is presented in outline only, as a way of indicating some of the general features of the materialised form, and is not intended to be normative. (At some point in the future, a skeleton materialised model may be declared normative, based on implementation experience).
+The `materialised` package contains the class model of the materialised form of the definition, which is created prior to its use in execution. The materialised model is presented in outline only, as a way of indicating some of the general features of the materialised form, and is not intended to be normative. (At some point in the future, a skeleton materialised model may be declared normative, based on implementation experience).
 
 The `history` package contains the model of audit events that have occurred to each Task Plan in a Work Plan during execution.
 
